<resources>
    <!-- 天地互联 -->
    <string name="app_name">征服卫星</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 主页 -->
    <string name="TMT_energy">设备电量</string>
    <string name="TMT_quantity">设备信号</string>
    <string name="TMT_sos">SOS</string>
    <string name="TMT_SHOW_TIANTONG_DB_VALUE">显示征服卫星DB值</string>
    <string name="TMT_record_voice">录音开关</string>
    <string name="TMT_mobileData">数据</string>
    <string name="TMT_location">定位</string>
    <string name="TMT_settings">设置</string>
    <string name="TMT_title">地理坐标</string>
    <string name="TMT_latitude">纬度</string>
    <string name="TMT_longitude">经度</string>
    <string name="TMT_entrnyMessage">无法连接,设备与卫星无连接</string>
    <string name="TMT_userEditors">用户编辑</string>
    <string name="TMT_exit">退出</string>
    <string name="TMT_sos_settings">SOS设置</string>
    <string name="TMT_wifi_settings">WIFI密码设置</string>
    <string name="TMT_date_settings">时间设置</string>
    <string name="TMT_offline_map">离线地图</string>
    <string name="TMT_check_change">检查更新</string>
    <string name="TMT_about">关于</string>
    <string name="TMT_factroy_reset">恢复出厂设置</string>
    <string name="TMT_link_phone">请输入紧急联系电话</string>
    <string name="TMT_please_input_wifipassword">请输入WIFI热点密码</string>
    <string name="TMT_please_settings_tt_server_date">设置设备时间</string>
    <string name="TMT_cannel">取消</string>
    <string name="TMT_SELECT_ALL">全选</string>
    <string name="TMT_yes">确认</string>
    <string name="TMT_date_sync_succeed">同步设备时间成功!</string>
    <string name="TMT_share">已保存</string>
    <string name="TMT_city_name">城市列表</string>
    <string name="TMT_load_manager">下载管理</string>
    <string name="TMT_hint_editors">输入城市名称或者拼音</string>
    <string name="TMT_hotaddres">热门地区</string>
    <string name="TMT_allArea">全部地区</string>
    <string name="TMT_finshLoad">已下载城市</string>
    <string name="TMT_notify">当前为WI-FI网络,切换至运营商流量会自动暂停下载</string>
    <string name="TMT_net_notify">当前为运营商网络,建议切换至WI-FI网络下载</string>
    <string name="TMT_version">征服卫星APP版本</string>
    <string name="TMT_soft_version">征服卫星服务版本</string>
    <string name="TMT_fixed_version">固件版本</string>
    <string name="TMT_number">序列号</string>
    <string name="TMT_MODULE_VERSION">征服模块版本号</string>
    <string name="TMT_hantInput">拨号或使用拼音搜索</string>
    <string name="TMT_jilu">拼音搜索或字母搜索</string>
    <string name="TMT_phone_histroy">通话记录</string>
    <string name="TMT_today">今天</string>
    <string name="TMT_yesterday">明天</string>
    <string name="TMT_earlier">更早</string>
    <string name="TMT_mall_list">通讯录</string>
    <string name="TMT_text">[中国平安]倒计时!“29元深圳政府重疾险个人”,,,,</string>
    <string name="TMT_delete">删除</string>
    <string name="TMT_delete_all">删除全部</string>
    <string name="TMT_delete_succeed">删除成功!</string>
    <string name="TMT_email">邮箱</string>
    <string name="TMT_QQ">QQ</string>
    <string name="TMT_loding_more">查看更多通话记录</string>
    <string name="TMT_contacts">联系人</string>
    <string name="TMT_takeup">收起</string>
    <string name="TMT_sendMessage">发送信息</string>
    <string name="TMT_sendMessage_success">发送信息成功</string>
    <string name="TMT_sendMessage_failed">发送信息失败</string>
    <string name="TMT_sendMessage_receiver">对方已接收</string>
    <string name="TMT_sendMessage_receiver_failed">对方接收失败</string>
    <string name="TMT_editor_caotacts">编辑</string>
    <string name="TMT_import_malllist">导入手机通讯录</string>
    <string name="TMT_contacts_name">姓名</string>
    <string name="TMT_add_contacts">新增联系人</string>
    <string name="TMT_phone">电话</string>
    <string name="TMT_mobile">手机</string>
    <string name="TMT_add_mobile">添加号码</string>
    <string name="TMT_short_message">短信</string>
    <string name="TMT_short_message_receiver">收信人</string>
    <string name="TMT_short_message_receiver_notnull">收信人不能为空</string>
    <string name="TMT_select_contacts">选择联系人</string>
    <string name="TMT_please_select">请先选择联系人</string>
    <string name="TMT_click_connect">点击连接</string>
    <string name="TMT_sos_setting">SOS设置</string>
    <string name="TMT_please_input_phone">请输入电话号码</string>
    <string name="TMT_please_input_shortMessage">求救短信</string>
    <string name="TMT_please_input_timetimer">发送间隔(秒)</string>
    <string name="TMT_is_empty_null">手机号不能为空!</string>
    <string name="TMT_COME_ON_HELP_ME">help me !!!</string>
    <string name="TMT_save_succeed">保存成功!</string>
    <string name="TMT_remind">请先去完成SOS设置!</string>
    <string name="TMT_dataisnull">没有更多的数据了!</string>
    <!-- 连接成功状态下 -->
    <string name="TMT_connect_succeed">已连接</string>
    <string name="TMT_connect_tiantong_please">请连接猫</string>
    <string name="TMT_connect_succeed_notice">已连接猫</string>
    <string name="TMT_dial_number_notmull">电话号码不能为空</string>
    <string name="TMT_dial_dialing">正在拨号</string>
    <string name="TMT_dial_endcall">正在挂断</string>
    <string name="TMT_gps_position_filed">获取设备定位失败!</string>

    <string name="TMT_tt_signal_scan">正在搜星中...</string>
    <string name="TMT_tt_signal_connect">已连接</string>
    <string name="TMT_tt_signal_connect_xz">限制服务</string>
    <string name="TMT_tt_signal_connect_gj">告警服务</string>

    <string name="TMT_be_occupied">设备已被占用!</string>
    <string name="TMT_loading">加载中...</string>
    <string name="TMT_usb_swtich">USB切换</string>
    <string name="TMT_select_shortMessage">选择短信</string>
    <string name="TMT_select_record">选择通话记录</string>
    <string name="TMT_please_select_shortMessage">请先选择短信!</string>
    <string name="TMT_setting_content_server_date"> 点击确定,将手机时间同步到设备中当前时间:</string>
    <string name="TMT_ANSWER">来电</string>
    <string name="TMT_PUTOUT">拨出</string>
    <string name="TMT_UNKNOW_STATUS">未接</string>
    <string name="TMT_wifi_password_notnull">WIFI密码不能为空</string>
    <string name="TMT_wifi_length_greatethan_eight">WIFI密码不能少于8位</string>
    <string name="TMT_the_change_content">更新内容如下:</string>
    <string name="TMT_the_update_dialog_title">APP新版本</string>
    <string name="TMT_CONFIRM_DELETE_ALL_MAIL_LIST_CONTACTS">温馨提示:您是否确认删除全部?</string>
    <string name="TMT_confirm_exit">温馨提示:您确定是否退出吗?</string>
    <string name="TMT_hint">提示</string>
    <string name="TMT_start_again_connect">升级成功,请重连WIFI!</string>
    <string name="TMT_update_failure_alert">更新失败,请重新更新!</string>
    <string name="TMT_WIFI_DISCONNECT_OF_UPDATE">WIFI连接中断,请重新连接!</string>
    <string name="TMT_UPDATE_SUCCEED_FOR_WAIT">请等待5~10秒猫端更新!</string>
    <string name="TMT_WIFI_DISCONNECT_OF_UPDATE_PLEASE_OUT">升级出现中断,请退出APP重新连接WIFI升级!</string>
    <string name="TMT_THE_DEVICE_NOT_INTERNET_NOW">设备未入网,请先入网!</string>
    <string name="TMT_THE_DEVICE_NOT_OPERATION">设备未入网,请先入网!</string>
    <string name="TMT_DEVICE_SYSTEM_RECOVER_SETTING">设备恢复出厂设置</string>
    <string name="TMT_ALERT_OF_DIALOG_CONTENT">温馨提示:是否要将设备进行恢复出厂设置?</string>
    <string name="TMT_DEVICE_IS_RECOVER_SUCCEED"></string>
    <string name="TMT_PLEASE_CLOSE_DATA_MOBILE_AND_ENABLE_WIFI">请关闭数据流量开关,并连接指定WIFI!</string>
    <string name="TMT_CHECK_FILE_FAILED">服务验证文件失败,请联系开发者!</string>
    <string name="OPERATE_OFTEN">不可操作太过于频繁,请稍后2秒!</string>
</resources>
