<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/white"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp">

    <TextView
        android:id="@+id/base_iv_back"
        android:text="@string/TMT_cannel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="17dp"
        android:paddingRight="16dp"
        />

    <TextView
        android:id="@+id/base_tv_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/deep_black"
        tools:text="@string/TMT_userEditors" />

    <TextView
        android:text="@string/TMT_yes"
        android:id="@+id/base_tv_toolbar_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="17dp"/>

</android.support.v7.widget.Toolbar>