<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tt.qzy.view.activity.SettingsActivity">

    <include layout="@layout/left_toobar_layout"/>

    <TextView
        android:id="@+id/settings_sos"
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="17dp"
        android:text="@string/TMT_sos_settings"
        android:drawableLeft="@drawable/sos"/>

    <TextView
        android:layout_marginLeft="56dp"
        android:background="@color/line_bg"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"/>

    <TextView
        android:id="@+id/setting_map"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="17dp"
        android:text="@string/TMT_offline_map"
        android:drawableLeft="@drawable/dingwei"/>

    <TextView
        android:id="@+id/setting_check"
        android:layout_marginTop="9dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="17dp"
        android:text="@string/TMT_check_change"
        android:drawableLeft="@drawable/jianchagengxin"/>

    <TextView
        android:layout_marginLeft="56dp"
        android:background="@color/line_bg"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"/>

    <TextView
        android:id="@+id/setting_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="17dp"
        android:text="@string/TMT_about"
        android:drawableLeft="@drawable/guanyu"/>

</LinearLayout>
