<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:textSize="13sp"
        android:text="@string/TMT_link_phone"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/custom_input"
        android:background="@drawable/custom_edittext_layout"
        android:layout_marginTop="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="29dp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="40dp"/>

    <include layout="@layout/line_dimens"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/custom_cannel"
            android:layout_weight="1"
            android:textSize="13sp"
            android:text="@string/TMT_cannel"
            android:textColor="@color/cannel"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="52dp"/>

        <TextView
            android:background="@color/line_bg"
            android:layout_width="0.8dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/custom_yes"
            android:layout_weight="1"
            android:textSize="13sp"
            android:textColor="@color/yes"
            android:gravity="center"
            android:text="@string/TMT_yes"
            android:layout_width="wrap_content"
            android:layout_height="52dp"/>
        
    </LinearLayout>

    <include layout="@layout/line_dimens"/>

</LinearLayout>